--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -104,3 +104,32 @@ body {
 .save-btn {
   @apply bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded
 }
+
+/* navbar */
+.navbar {
+  @apply bg-gray-800 p-4 sticky top-0 z-50
+}
+
+.cont-nav {
+  @apply container mx-auto flex flex-col md:flex-row items-center justify-between
+}
+
+.bar {
+  @apply flex items-center space-x-4 mb-2 md:mb-0
+}
+
+.directory {
+  @apply text-white text-2xl font-bold
+}
+
+.return-btn {
+  @apply bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded
+}
+
+.search {
+  @apply w-full md:w-auto md:flex-grow md:max-w-md
+}
+
+.search-cont {
+  @apply w-full px-4 py-2 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-blue-500
+}
